[gd_scene load_steps=2 format=3 uid="uid://dpmylgddcilwg"]

[ext_resource type="Script" path="res://src/Main.gd" id="1_3qsph"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3qsph")

[node name="Settings" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(800, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -59.0
offset_top = -18.5
offset_right = 59.0
offset_bottom = 18.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 5

[node name="Welcome" type="Label" parent="Settings"]
layout_mode = 2
text = "WELCOME TO THE SFSCON PDF TOOL!"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Settings"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="DayConfig1" type="HBoxContainer" parent="Settings"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Description" type="Label" parent="Settings/DayConfig1"]
layout_mode = 2
text = "Day 1"
horizontal_alignment = 1

[node name="Day1" type="LineEdit" parent="Settings/DayConfig1"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
placeholder_text = "2024-11-04"

[node name="DayConfig2" type="HBoxContainer" parent="Settings"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Description" type="Label" parent="Settings/DayConfig2"]
layout_mode = 2
text = "Day 2"
horizontal_alignment = 1

[node name="Day2" type="LineEdit" parent="Settings/DayConfig2"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
placeholder_text = "2024-11-05"

[node name="PdfConfig" type="HBoxContainer" parent="Settings"]
layout_mode = 2
theme_override_constants/separation = 5
alignment = 1

[node name="Description" type="Label" parent="Settings/PdfConfig"]
layout_mode = 2
text = "Pdf file format:"
horizontal_alignment = 1

[node name="TimeCheckbox" type="CheckBox" parent="Settings/PdfConfig"]
layout_mode = 2
button_pressed = true
text = "Time"

[node name="TitleCheckBox" type="CheckBox" parent="Settings/PdfConfig"]
layout_mode = 2
button_pressed = true
text = "Title"

[node name="RegexCheckbox" type="CheckBox" parent="Settings/PdfConfig"]
layout_mode = 2
button_pressed = true
text = "Special characters"

[node name="Example" type="Label" parent="Settings"]
layout_mode = 2
text = "1030 - Märio Rössi - Talk about $$$.pdf"
horizontal_alignment = 1

[node name="Submit" type="Button" parent="Settings"]
layout_mode = 2
size_flags_horizontal = 4
disabled = true
text = " Open csv "

[node name="WebsiteFileDialog" type="FileDialog" parent="."]
title = "Open website export csv"
initial_position = 2
size = Vector2i(1280, 720)
ok_button_text = "Open"
dialog_close_on_escape = false
mode_overrides_title = false
file_mode = 0
access = 2
filters = PackedStringArray("*.csv")

[node name="Result" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0804688
anchor_top = 0.0861111
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -43.0
offset_top = -24.0
offset_right = -43.0
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Statistics" type="Label" parent="Result"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
horizontal_alignment = 1

[node name="ProgressLabel" type="Label" parent="Result"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "1 of 17"
horizontal_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="Result"]
layout_mode = 2
step = 1.0

[node name="HSeparator" type="HSeparator" parent="Result"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="ErrorsLabel" type="Label" parent="Result"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "TALKS WITH NO PDF"

[node name="Errors" type="RichTextLabel" parent="Result"]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 2
selection_enabled = true

[node name="ErrorsLabel2" type="Label" parent="Result"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "PROBLEMS SAVING PDF"

[node name="Errors2" type="RichTextLabel" parent="Result"]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 2
selection_enabled = true

[node name="Restart" type="Button" parent="Result"]
layout_mode = 2
size_flags_horizontal = 4
text = "Restart"
metadata/_edit_use_anchors_ = true

[node name="HTTPRequest" type="HTTPRequest" parent="."]
use_threads = true

[connection signal="text_changed" from="Settings/DayConfig1/Day1" to="." method="_on_day_1_text_changed"]
[connection signal="text_changed" from="Settings/DayConfig2/Day2" to="." method="_on_day_2_text_changed"]
[connection signal="toggled" from="Settings/PdfConfig/TimeCheckbox" to="." method="_on_time_checkbox_toggled"]
[connection signal="toggled" from="Settings/PdfConfig/TitleCheckBox" to="." method="_on_title_check_box_toggled"]
[connection signal="toggled" from="Settings/PdfConfig/RegexCheckbox" to="." method="_on_regex_checkbox_toggled"]
[connection signal="pressed" from="Settings/Submit" to="." method="_on_submit_pressed"]
[connection signal="file_selected" from="WebsiteFileDialog" to="." method="_on_website_file_dialog_file_selected"]
[connection signal="pressed" from="Result/Restart" to="." method="_on_restart_pressed"]
